package leoluiten.presentation.models;

public enum MatchStatus {

    STARTED, FINISHED, CANCELED
}
