package leoluiten.presentation.models;

public interface Play {
}
