package leoluiten.presentation.models.rps;

public enum HandShape {
    ROCK, PAPER, SCISSORS
}
