@startuml

skinparam class {
    BackgroundColor<<Match>> PaleGreen
    BackgroundColor<<MatchRps>> PaleGoldenRod
}

class Player {
    Long id
    String userName
    String password
    String email
    String avatar
    LocalDateTime lastLoginDate
}

class Game {
    Long id
    String code
    String name
    String description
    String rules
}

enum MatchStatus {
    STARTED
    FINISHED
    CANCELED
}

abstract class Match {
    Long id
    Game game
    Player player1
    Player player2
    LocalDateTime createdDate
    MatchStatus status
}

class MatchRps {
    Integer numberOfPlays;
    Integer remainingPlays;
    Integer player1Score;
    Integer player2Score;
    List<PlayRps> plays;
    Long winnerId;
}

interface Play{
}

class PlayRps {
    Long id;
    Long matchRpsId;
    HandShape handShapePlayer1;
    HandShape handShapePlayer2;
    Long winnerId;
}

enum HandShape {
    ROCK
    PAPER
    SCISSORS
}

MatchStatus --* Match
Game --* Match
Player --* Match
Match <|-- MatchRps
MatchRps *-- PlayRps
PlayRps*-l- HandShape
PlayRps -r-|> Play


@enduml
